[tools] Adapt CI to Enclave depedencies
Summary: Adapt CI to Enclave depedencies

Test Plan: all tests pass

Reviewers: lei.yul, jeffery.wsj, sanhong.lsh

Issue: https://aone.alibaba-inc.com/task/40660818

CR:
https://code.aone.alibaba-inc.com/java-tee/JavaEnclave/codereview/8316913